# logfather

./: Cargo.toml  LICENSE  README.md  log.txt
examples/: simple.rs  timestamp-log.rs
src/: error.rs  lib.rs  logger.rs  macros.rs  output.rs
tests/: integration_tests.rs
tests/common/: mod.rs
