[package]
name = "logfather"
version = "0.2.2"
authors = ["Joshua Benn", "Ryan Mason"]
description = "A simple and straightforward logging library for Rust."
license = "MIT"
repository = "https://github.com/JoshBenn/logfather"
keywords = ["log", "logging", "logger", "rust"]
categories = ["development-tools::logging"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
lazy_static = "1.4.0"
simplicio = "0.1.1"
